# Prism2

./: README.md  ni845x.py  pyproject.toml  run.py
src/prism2/gui/: main_view.py
src/prism2/hardware/: handler.py  mock_handler.py  ni845x.py
src/prism2/protocol/: parser.py
src/prism2/view_models/: main_view_model.py
tests/: test_main_view_model.py
